# movie-manager

./: .gitignore  e --onto  movies.db  pyproject.toml  requirements.txt
backend/: .pre-commit-config.yaml  config.yaml  logging.yaml  makefile  movies.db  movies_bp.db
backend/mvorganizer/: base_db.py  config.py  crud.py  exceptions.py  main.py  models.py  rebuild.py  schemas.py  session.py  utils.py
backend/mvorganizer/crud/: __init__.py  actors.py  categories.py  movies.py  series.py  studios.py
backend/mvorganizer/routes/: __init__.py  actors.py  categories.py  movies.py  series.py  studios.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  index.tsx  msw.ts  test-utils.tsx
frontend/src/components/: ActorSelector.tsx  ActorSelectorList.tsx  AdminAddForm.tsx  AdminImportMovies.tsx  CategorySelector.tsx  Container.tsx  Loading.tsx  MovieData.tsx  MovieDataFormRow.tsx  MovieImportButton.tsx  MovieList.tsx  MoviePropertyForm.tsx  MoviePropertyFormSelector.tsx  MovieSection.tsx  NavBar.tsx  NavLink.tsx
frontend/src/components/__test__/: MockFormikContext.tsx  MovieDataForm.test.tsx
frontend/src/pages/: AdminPage.tsx  MainPage.tsx
frontend/src/state/: MovieManagerApi.ts  initialState.ts  reducer.ts  store.ts
frontend/src/types/: api.ts  form.tsx  state.ts
