[tool.poetry]
name = "mv-organizer"
version = "0.1.0"
description = "movie organizer app"
authors = ["y"]
readme = "README.md"
packages = [{include = "mv_organizer"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"
PyYAML = "^6.0"
SQLAlchemy = "^1.4.40"
black = "^22.8.0"
pre-commit = "^2.20.0"
pycln = "^2.1.1"
isort = "^5.10.1"
click = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79

[tool.pycln]
all = true

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
